fix: enhance scrollbar styles for better visibility and user experience

--- a/src/index.css
+++ b/src/index.css
@@ -228,3 +228,19 @@ th {
     padding: 8px;
   }
 }
+html {
+  scrollbar-color: var(--background-color-9) transparent;
+  scrollbar-width: thin;
+}
+::-webkit-scrollbar {
+  width: 8px; /* vertical scrollbar thickness */
+  height: 8px; /* horizontal scrollbar thickness */
+}
+::-webkit-scrollbar-thumb {
+  background: var(--background-color-9);
+  border-radius: 0.5rem;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 0.5rem;
+}
